fixes images and toc drawer

--- a/markup/index.hbs
+++ b/markup/index.hbs
@@ -31,34 +31,36 @@ sectionData:
     image: TB_FHI360-Zambia[UTH]62_web.jpg
     caption: imageCaption caption
     toc:
-      - desktop: A beekeeper uses new skills to build a thriving business in Jordan
-        mobile: A beekeeper in Jordan builds her business
+        desktop: State-of-the-art TB control
+        mobile: State-of-the-art TB control
         href: #one
-        toc: 1
+        chapter: 1
   - name: Career Centers (Morocco)
     title: "You’re hired: 21st-century career centers"
     subtitle: | 
                 <h3>Kenza Elbouazzaoui</h3>
                 <h3>Morocco</h3>
     photoCredit: Amira Azzouzi/FHI 360
-    image: asdf.jpg
+    image: 
     caption: imageCaption caption
     toc:
-      - desktop: A beekeeper uses new skills to build a thriving business in Jordan
-        mobile: A beekeeper in Jordan builds her business
+        desktop: "You’re hired: 21st-century career centers"
+        mobile: "You’re hired: 21st-century career centers"
         href: #one
-        toc: 1
+        chapter: 2
   - name: Compass Rose (USA)
-    title: Youth get a second chance Christopher C.
-    subtitle: <h3>United States</h3> 
+    title: Youth get a second chance
+    subtitle: |
+                <h3>Christopher C.</h3>
+                <h3>United States</h3> 
     photoCredit: Leanne Gray/FHI 360
     image: Compass Rose_web.jpg
     caption: imageCaption caption
     toc:
-      - desktop: A beekeeper uses new skills to build a thriving business in Jordan
-        mobile: A beekeeper in Jordan builds her business
+        desktop: Youth get a second chance
+        mobile: Youth get a second chance
         href: #one
-        toc: 1
+        chapter: 3
   - name: Yemen
     title: An integrated response addresses urgent needs 
     subtitle: <h3>Yemen</h3>
@@ -66,10 +68,10 @@ sectionData:
     image: Yemen_GettyImages-1042306644_web.jpg
     caption: imageCaption caption
     toc:
-      - desktop: A beekeeper uses new skills to build a thriving business in Jordan
-        mobile: A beekeeper in Jordan builds her business
+        desktop: An integrated response addresses urgent needs
+        mobile: An integrated response addresses urgent needs
         href: #one
-        toc: 1
+        chapter: 4
   - name: SHIFT (Vietnam)
     title: Leading the way in financing the HIV response
     subtitle: <h3>Vietnam</h3>
@@ -77,10 +79,10 @@ sectionData:
     image: SHIFT 8997_web.jpg
     caption: imageCaption caption
     toc:
-      - desktop: A beekeeper uses new skills to build a thriving business in Jordan
-        mobile: A beekeeper in Jordan builds her business
+        desktop: Leading the way in financing the HIV response
+        mobile: Leading the way in financing the HIV response
         href: #one
-        toc: 1
+        chapter: 5
   - name: DREAMS (Zimbabwe)
     title: Girl power Jane Nyathi
     subtitle: <h3>Zimbabwe</h3>
@@ -88,10 +90,10 @@ sectionData:
     image: Dreams 536_web.jpg
     caption: imageCaption caption
     toc:
-      - desktop: A beekeeper uses new skills to build a thriving business in Jordan
-        mobile: A beekeeper in Jordan builds her business
+        desktop: Girl power Jane Nyathi
+        mobile: Girl power Jane Nyathi
         href: #one
-        toc: 1
+        chapter: 6
   - name: NTD’s (Laos)
     title: Moving closer to wiping out neglected diseases
     subtitle: <h3>Laos</h3>
@@ -99,32 +101,32 @@ sectionData:
     image: NTDs_GettyImages-940751048_web.jpg
     caption: imageCaption caption
     toc:
-      - desktop: A beekeeper uses new skills to build a thriving business in Jordan
-        mobile: A beekeeper in Jordan builds her business
+        desktop: Moving closer to wiping out neglected diseases
+        mobile: Moving closer to wiping out neglected diseases
         href: #one
-        toc: 1
+        chapter: 7
   - name: RANA (Nigeria)
     title: Literacy improved through local language learning
     subtitle: <h3>Nigeria</h3>
     photoCredit: Kunle Lawal/FHI 360
-    image: asdf.jpg
+    image: 
     caption: imageCaption caption
     toc:
-      - desktop: A beekeeper uses new skills to build a thriving business in Jordan
-        mobile: A beekeeper in Jordan builds her business
+        desktop: Literacy improved through local language learning
+        mobile: Literacy improved through local language learning
         href: #one
-        toc: 1
+        chapter: 8
   - name: Ventures
     title: FHI Ventures is launched to scale impact
     subtitle: 
     photoCredit: TBD
-    image: asdf.jpg
+    image: 
     caption: imageCaption caption
     toc:
-      - desktop: A beekeeper uses new skills to build a thriving business in Jordan
-        mobile: A beekeeper in Jordan builds her business
+        desktop: FHI Ventures is launched to scale impact
+        mobile: FHI Ventures is launched to scale impact
         href: #one
-        toc: 1
+        chapter: 9
   - name: CTI
     title: Groundbreaking contraceptive technologies
     subtitle:
@@ -132,10 +134,10 @@ sectionData:
     image: CTI-microneedlepatch_web.jpg
     caption: imageCaption caption
     toc:
-      - desktop: A beekeeper uses new skills to build a thriving business in Jordan
-        mobile: A beekeeper in Jordan builds her business
+        desktop: Groundbreaking contraceptive technologies
+        mobile: Groundbreaking contraceptive technologies
         href: #one
-        toc: 1
+        chapter: 10
   - name: AMD (Ethiopia & Mozambique)
     title: Evidence to avert maternal and newborn deaths
     subtitle: <h3>Ethiopia and Mozambique</h3>
@@ -143,10 +145,10 @@ sectionData:
     image: Digital AMDD_8427009988_ba45a790c2_o_web.jpg
     caption: imageCaption caption
     toc:
-      - desktop: A beekeeper uses new skills to build a thriving business in Jordan
-        mobile: A beekeeper in Jordan builds her business
+        desktop: Evidence to avert maternal and newborn deaths
+        mobile: Evidence to avert maternal and newborn deaths
         href: #one
-        toc: 1
+        chapter: 11
   - name: Data Drives impact (Tanzania & Zanzibar)
     title: Data drives impact 
     subtitle: <h3>Tanzania and Zanzibar</h3>
@@ -154,16 +156,17 @@ sectionData:
     image: ar2018-m360-mobileapp_web.jpg
     caption: imageCaption caption
     toc:
-      - desktop: A beekeeper uses new skills to build a thriving business in Jordan
-        mobile: A beekeeper in Jordan builds her business
+        desktop: Data drives impact
+        mobile: Data drives impact
         href: #one
-        toc: 1
+        chapter: 12
+  - name: Learn More
 
 ---
 
 {{#extend "base"}}
   {{#content "right-sidebar"}}
-    {{> TOC }} 
+          {{> TOC }} 
   {{/content}}
   {{#content "main"}}
     <nav id="up-down">
@@ -171,34 +174,50 @@ sectionData:
       <img data-movedown src="../img/icons/arrowup-icon.svg" />
     </nav>
     <div id="fullpage">
-      
-      {{> sections/ceo-letter sectionIndex=1 }}
-      {{!-- TB (Zambia) --}}
-      {{> sections/tb sectionIndex=2 }}
-      {{!-- Career Centers (Morocco)--}}
-      {{> sections/career-centers sectionIndex=3 }}
-      {{!-- Compass Rose (USA) --}}
-      {{> sections/yemen sectionIndex=4 }}
-      {{!-- Yemen --}}
-      {{> sections/compass-rose sectionIndex=5 }}
-      {{!-- SHIFT (Vietnam) --}}
-      {{> sections/shift sectionIndex=6 }}
-      {{!-- DREAMS (Zimbabwe) --}}
-      {{> sections/dreams sectionIndex=7 }}
-      {{!-- NTD’s (Laos) --}}
-      {{> sections/ventures sectionIndex=8 }}
-      {{!-- RANA (Nigeria) --}}
-      {{> sections/cti sectionIndex=9 }}
-      {{!-- Ventures --}}
-      {{> sections/rana sectionIndex=10 }}
-      {{!-- CTI --}}
-      {{> sections/dig-solution sectionIndex=11 }}
-      {{!-- AMD (Ethiopia & Mozambique) --}}
-      {{> sections/ntds sectionIndex=12 }}
-      {{!-- Data Drives impact (Tanzania & Zanzibar) --}}
-      {{> sections/digital-amdd sectionIndex=13 }}
-      {{!-- Learn More --}}
-      {{> sections/learn-more sectionIndex=14 }}
+      {{#each sectionData}}
+        {{#eq  this.name "Ceo Letter" }}
+          {{> sections/ceo-letter sectionIndex=@index }}
+        {{/eq}}
+        {{#eq  this.name "TB (Zambia)" }}
+          {{> sections/tb sectionIndex=@index }}
+        {{/eq}}
+        {{#eq  this.name "Career Centers (Morocco)" }}
+          {{> sections/career-centers sectionIndex=@index }}
+        {{/eq}}
+        {{#eq  this.name "Compass Rose (USA)" }}
+          {{> sections/yemen sectionIndex=@index }}
+        {{/eq}}
+        {{#eq  this.name "Yemen" }}
+          {{> sections/compass-rose sectionIndex=@index }}
+        {{/eq}}
+        {{#eq  this.name "SHIFT (Vietnam)" }}
+          {{> sections/shift sectionIndex=@index }}
+        {{/eq}}
+        {{#eq  this.name "DREAMS (Zimbabwe)" }}
+          {{> sections/dreams sectionIndex=@index }}
+        {{/eq}}
+        {{#eq  this.name "NTD’s (Laos)" }}
+          {{> sections/ventures sectionIndex=@index }}
+        {{/eq}}
+        {{#eq  this.name "RANA (Nigeria)" }}
+          {{> sections/cti sectionIndex=@index }}
+        {{/eq}}
+        {{#eq  this.name "Ventures" }}
+          {{> sections/rana sectionIndex=@index }}
+        {{/eq}}
+        {{#eq  this.name "CTI" }}
+          {{> sections/dig-solution sectionIndex=@index }}
+        {{/eq}}
+        {{#eq  this.name "AMD (Ethiopia & Mozambique)" }}
+          {{> sections/ntds sectionIndex=@index }}
+        {{/eq}}
+        {{#eq  this.name "Data Drives impact (Tanzania & Zanzibar)" }}
+          {{> sections/digital-amdd sectionIndex=@index }}
+        {{/eq}}
+        {{#eq  this.name "Learn More" }}
+          {{> sections/learn-more sectionIndex=@index }}
+        {{/eq}}
+      {{/each}}
     </div>  
     {{/content}}
 {{/extend}}
