--- a/markup/partials/elements/simple-section.hbs
+++ b/markup/partials/elements/simple-section.hbs
@@ -1,26 +1,34 @@
-<section class="section" data-section="{{this.sectionIndex}}">
-  {{#if sectionData[this.sectionIndex].photoCredit}}
+<section class="section" data-section="{{this.sectionIndex}}" {{#if toc}}data-chapter="chapter-{{toc.chapter}}"{{/if}}>
+  {{#if photoCredit}}
     <div class="photo-credits">
-      <h6><span>Photo:</span>{{sectionData[this.sectionIndex].photoCredit}}</h6>
+      <h6><span>Photo:</span>{{photoCredit}}</h6>
+    </div>
+    <div class="photo-credit-container">
+        <div class="photo-credit-trigger grid-x grid-padding-x align-middle">
+            <span class="cell shrink">Photo credit</span>
+            <img src="../img/icons/down-chevron.svg" alt="">
+        </div>
     </div>
   {{/if}}
-  {{#if sectionData[this.sectionIndex].image }}
+  {{#if image }}
     <div class="bg objectfit-img">
-      <img class="back" data-src="{{sectionData[this.sectionIndex].image}}" alt="{{sectionData[this.sectionIndex].caption}}">
+      <img src="../img/slides/{{image}}" alt="{{caption}}">
     </div>
-    <div class="bg-screen black"></div>
+    <div class="bg-screen"></div>
   {{/if}}
   <div class="grid-x inner-frame">
     <div class="small-12 medium-6 large-6 cell grid-y align-center">
       <div class="cell shrink slide-title stagger-in">
-        <h2>{{#block "title"}}{{/block}}</h2>
+        <h2>{{#block "title"}}{{title}}{{/block}}</h2>
       </div>
-      <div class="cell shrink stagger-in">
+      {{#if subtitle }}
+      {{!-- <div class="cell shrink stagger-in">
         <hr class="small">
-      </div>
+      </div> --}}
       <div class="cell shrink slide-subtitle stagger-in">
-        {{#block "subtitle"}}{{/block}}
+        {{#block "subtitle"}}{{{subtitle}}}{{/block}}
       </div>
+      {{/if}}
     </div>
   </div>
 
