--- a/markup/partials/sections/cti.hbs
+++ b/markup/partials/sections/cti.hbs
@@ -1,13 +1,5 @@
-{{#extend "elements/simple-section"}}
-    {{#content "content"}}
-        <h1>Test</h1>
-        <p class="mb0">
-            <strong class="uppercase">Chief Executive Officer, FHI 360</strong>
-        </p>
-    {{/content}}
+{{#extend "elements/simple-section" drawer=true}}
     {{#content "drawer-content"}}
-        <p class="mb0">
-            <strong class="uppercase">Drawer Content</strong>
-        </p>
+        {{> drawerContent/ceo-message}}
     {{/content}}
 {{/extend}}
