fix drawer content

--- a/markup/partials/sections/learn-more.hbs
+++ b/markup/partials/sections/learn-more.hbs
@@ -1,4 +1,4 @@
-<section class="section" data-section="15">
+<section class="section learnmore">
   <div class="bg-screen"></div>
   <div class="grid-y align-center" style="height: 100vh;">
     <div class="cell auto medium-9 grid-x p2">
