--- a/markup/partials/sections/ceo-letter.hbs
+++ b/markup/partials/sections/ceo-letter.hbs
@@ -1,5 +1,7 @@
-{{#extend "elements/simple-section" drawer=true}}
-    {{#content "drawer-content"}}
-        {{> drawerContent/ceo-message}}
+{{#extend "elements/animated-section" drawer=true}}
+    {{#content "content"}}
+        <h3 class="uppercase bold ceo-sub">A message from our CEO, Patrick C. Fine</h3>
+        <h2 class="faded70 ceo-h2">This report is about people — people who, faced with seemingly insurmountable challenges, remain determined to shape their own destinies and contribute to their communities.</h2>
+        <h3 class="faded70 ceo-h3">Learn more about how we partner with individuals, communities and nations to support people in addressing the major forces that affect their lives.</h3>
     {{/content}}
 {{/extend}}
