--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -103,6 +103,18 @@ body {
 .uppercase {
 	text-transform: uppercase;
 }
+.bold {
+	font-weight: 900;
+}
+
+.faded70 {
+	opacity: 0.7;
+}
+
+.middle-center {
+	align-items: center;
+  justify-content: center;
+}
 
 .h1,
 .h2,
@@ -370,3 +382,4 @@ nav#up-down {
 		display: flex;
 	}
 }
+
