--- a/scss/partials/_slides.scss
+++ b/scss/partials/_slides.scss
@@ -149,154 +149,140 @@
 	}
 }
 
-.section.intro {
-	color: #000;
+// .section.intro {
+// 	color: #000;
 
-	$orange: #f27321;
+// 	$orange: #f27321;
 
-	h1,
-	h2,
-	h3,
-	h4,
-	h5,
-	h6,
-	p,
-	span,
-	.intro-header {
-		margin: 0;
-		line-height: 1;
-	}
+// 	h1,
+// 	h2,
+// 	h3,
+// 	h4,
+// 	h5,
+// 	h6,
+// 	p,
+// 	span,
+// 	.intro-header {
+// 		margin: 0;
+// 		line-height: 1;
+// 	}
 
-	.flex {
-		display: flex;
-		align-items: center;
-		justify-content: center;
-	}
+// 	.flex {
+// 		display: flex;
+// 		align-items: center;
+// 		justify-content: center;
+// 	}
 
-	.intro-header,
-	.catalyst {
-		opacity: 0;
-		text-align: center;
+// 	.intro-header,
+// 	.catalyst {
+// 		opacity: 0;
+// 		text-align: center;
 
-		@media screen and (min-width: $medium) {
-			font-size: 56px;
-			font-size: 6vw;
-		}
-	}
+// 		@media screen and (min-width: $medium) {
+// 			font-size: 56px;
+// 			font-size: 6vw;
+// 		}
+// 	}
 
-	#words {
-		position: relative;
-		display: inline-block;
-		// transform: translateY(-40px);
-		> span {
-			display: none;
-		}
-	}
+// 	#words {
+// 		position: relative;
+// 		display: inline-block;
+// 		// transform: translateY(-40px);
+// 		> span {
+// 			display: none;
+// 		}
+// 	}
 
-	.catalyst {
-		cursor: pointer;
-		display: none;
-		position: absolute;
-		width: 100%;
-		height: 100%;
-		left: 0;
-		top: 0;
+// 	.catalyst {
+// 		cursor: pointer;
+// 		display: none;
+// 		position: absolute;
+// 		width: 100%;
+// 		height: 100%;
+// 		left: 0;
+// 		top: 0;
 
-		svg {
-			position: absolute;
-			transform: translate(-50%, -50%);
-			left: 50%;
-			top: 50%;
-			height: auto;
-			width: auto;
-			min-width: 100vw;
-			min-height: 100vh;
-		}
-	}
+// 		svg {
+// 			position: absolute;
+// 			transform: translate(-50%, -50%);
+// 			left: 50%;
+// 			top: 50%;
+// 			height: auto;
+// 			width: auto;
+// 			min-width: 100vw;
+// 			min-height: 100vh;
+// 		}
+// 	}
 
-	#orange_dot,
-	#orange_dot2,
-	#orange_dot3 {
-		transform-origin: center center;
-	}
-	#orange_dot2 {
-		opacity: 0;
-		transform-origin: center center;
-	}
+// 	#orange_dot,
+// 	#orange_dot2,
+// 	#orange_dot3 {
+// 		transform-origin: center center;
+// 	}
+// 	#orange_dot2 {
+// 		opacity: 0;
+// 		transform-origin: center center;
+// 	}
 
-	#orange_dot3_svg {
-		top: 0;
-		left: 0;
-		position: absolute;
-	}
+// 	#orange_dot3_svg {
+// 		top: 0;
+// 		left: 0;
+// 		position: absolute;
+// 	}
 
-	#intro-chevron {
-		position: absolute;
-		bottom: 80px;
-		left: 50%;
-		width: 100px;
-		margin-left: -50px;
-		opacity: 0;
-	}
-}
+// 	#intro-chevron {
+// 		position: absolute;
+// 		bottom: 80px;
+// 		left: 50%;
+// 		width: 100px;
+// 		margin-left: -50px;
+// 		opacity: 0;
+// 	}
+// }
 
-.fp-viewing-ceo {
-	#up-down {
-		img {
-			opacity: 1;
-		}
-	}
-}
+// .fp-viewing-ceo {
+// 	#up-down {
+// 		img {
+// 			opacity: 1;
+// 		}
+// 	}
+// }
 
 [data-section='0'] {
-	background-color: #cccccc;
-	color: #000;
-
-	hr.medium {
-		border-width: 1px;
-		border-color: #666666;
-	}
-
-	.h3 {
-		font-weight: 500;
-		line-height: 1.2;
-	}
-
-	.align-justify {
-		justify-content: space-evenly !important;
-	}
+    background-color: inherit !important;
 }
 
-[data-section='2'] {
-	@media screen and (min-width: 768px) {
-		h2 {
-			font-size: 48px !important;
-		}
-	}
+// ceo
+.ceo-sub {
+	font-size: 18px;
+	font-weight: 700;
+}
+.ceo-h2 {
+		font-size: 34px !important;
+    font-weight: 500;
 }
 
-[data-section='14'] {
-	.counter {
-		font-size: 40px;
-		margin-right: 20px;
-	}
+.ceo-h3 {
+		font-size: 20px;
+    font-weight: 500;
 }
 
-[data-section='15'] {
+
+.learnmore {
 	background: white;
 	color: #000;
 	h2 {
 		color: $orange;
 	}
-}
-
-// learnmore
-#footer {
 	a > img {
 		width: 30px;
 		height: 30px;
 	}
 }
+
+// #footer {
+
+// }
 
 .photo-credit {
 	&-container {
