--- a/markup/partials/elements/simple-section.hbs
+++ b/markup/partials/elements/simple-section.hbs
@@ -17,7 +17,7 @@
     <div class="bg-screen"></div>
   {{/if}}
   <div class="grid-x inner-frame">
-    <div class="small-12 medium-6 large-6 cell grid-y align-center">
+    <div class="small-12 medium-8 cell grid-y align-right">
       <div class="cell shrink slide-title stagger-in">
         <h2>{{#block "title"}}{{title}}{{/block}}</h2>
       </div>
