--- a/scss/partials/_slides.scss
+++ b/scss/partials/_slides.scss
@@ -1,283 +1,184 @@
 .intro.section {
-	// position: fixed;
-	// top: 0;
-	// left: 0;
-	width: 100%;
-	height: 100%;
-	z-index: 1000;
-	background: #fff;
-	color: #000;
+  // position: fixed;
+  // top: 0;
+  // left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+  background: #fff;
+  color: #000;
 }
 .section {
-	color: white;
-	.bg {
-		position: absolute;
-		width: 100%;
-		height: 100%;
-		z-index: -2;
-		overflow: hidden;
-		&-screen {
-			z-index: -1;
-			position: absolute;
-			width: 100%;
-			height: 100%;
-			background: rgba(0, 0, 0, 0.4);
+  color: white;
+  .bg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -2;
+    overflow: hidden;
+    &-screen {
+      z-index: -1;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.4);
 
-			&.darker {
-				background: rgba(0, 0, 0, 0.6);
-			}
+      &.darker {
+        background: rgba(0, 0, 0, 0.6);
+      }
 
-			&.lighter {
-				background: rgba(0, 0, 0, 0.3);
-			}
+      &.lighter {
+        background: rgba(0, 0, 0, 0.3);
+      }
 
-			&.purple {
-				background: rgba(55, 33, 79, 0.6);
-			}
+      &.purple {
+        background: rgba(55, 33, 79, 0.6);
+      }
 
-			&.black {
-				background: #000;
-			}
-		}
-	}
-	.inner-frame {
-		// min-height: 100vh;
-		height: 100%;
-		padding: 100px 60px 185px 60px;
+      &.black {
+        background: #000;
+      }
+    }
+  }
+  .inner-frame {
+    // min-height: 100vh;
+    height: 100%;
+    padding: 100px 60px 185px 60px;
 
-		&.centered {
-			padding: 185px 60px;
-		}
-	}
+    &.centered {
+      padding: 185px 60px;
+    }
+  }
 
-	.slide-title h2 {
-		font-size: 30px;
-		font-weight: 200;
-	}
-	.slide-subtitle h3 {
-		font-size: 20px;
-		font-weight: 200;
-		color: rgba(255, 255, 255, 0.75);
-		margin-bottom: 0;
-	}
+  .slide-title h2 {
+    font-size: 30px;
+    font-weight: 500;
+  }
+  .slide-subtitle h3 {
+    font-size: 20px;
+    font-weight: 200;
+    color: rgba(255, 255, 255, 0.75);
+    margin-bottom: 0;
+  }
 
-	@media screen and (min-width: $medium) {
-		.slide-title h2 {
-			font-size: 5vw;
-		}
-		.slide-subtitle h3 {
-			font-size: 2.5vw;
-		}
-	}
+  @media screen and (min-width: $medium) {
+    .slide-title h2 {
+      font-size: 3.75vw;
+    }
+    .slide-subtitle h3 {
+      font-size: 2.5vw;
+    }
+  }
 }
 
 .drawer-button {
-	cursor: pointer;
-	width: 80px;
-	margin-bottom: 0px;
+  cursor: pointer;
+  width: 80px;
+  margin-bottom: 0px;
 
-	&_container {
-		position: relative;
-		display: flex;
-		flex-direction: column;
-		text-align: center;
+  &_container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
 
-		position: absolute;
-		transform: translateX(-50%);
-		left: 50%;
-		bottom: 0;
-		margin-bottom: 60px;
-		z-index: 10003;
+    position: absolute;
+    transform: translateX(-50%);
+    left: 50%;
+    bottom: 0;
+    margin-bottom: 60px;
+    z-index: 10003;
 
-		img {
-			transition: all ease 300ms;
-			transform-origin: 45% center;
-		}
-	}
+    img {
+      transition: all ease 300ms;
+      transform-origin: 45% center;
+    }
+  }
 }
 .drawer-close-button {
-	opacity: 0;
-	position: absolute;
-	pointer-events: none;
-	top: 0;
-	left: 0;
-	width: 80px;
-	transform: rotate(90deg);
+  opacity: 0;
+  position: absolute;
+  pointer-events: none;
+  top: 0;
+  left: 0;
+  width: 80px;
+  transform: rotate(90deg);
 }
 
 .drawer-open .drawer-button_container {
-	.drawer-button_label {
-		opacity: 0;
-	}
-	img {
-		opacity: 0;
-	}
-	.drawer-close-button {
-		transform: rotate(0);
-		opacity: 1;
-	}
+  .drawer-button_label {
+    opacity: 0;
+  }
+  img {
+    opacity: 0;
+  }
+  .drawer-close-button {
+    transform: rotate(0);
+    opacity: 1;
+  }
 }
 
 .leftDrawer {
-	background: #fff;
-	color: #000;
-	height: 100vh;
-	position: absolute;
-	left: 0;
-	top: 0;
-	transform: translateX(-100%);
-	width: 50%;
-	z-index: 10002;
-	padding: 0 30px;
+  background: #fff;
+  color: #000;
+  height: 100vh;
+  position: absolute;
+  left: 0;
+  top: 0;
+  transform: translateX(-100%);
+  width: 50%;
+  z-index: 10002;
+  padding: 0 30px;
 
-	overflow-y: auto;
+  overflow-y: auto;
 
-	.drawer-open & {
-		box-shadow: black 0px 0px 50px 0px;
-	}
+  .drawer-open & {
+    box-shadow: black 0px 0px 50px 0px;
+  }
 
-	.drawer-title {
-		color: $orange;
-	}
-	p {
-		line-height: 1.6;
-	}
+  .drawer-title {
+    color: $orange;
+  }
+  p {
+    line-height: 1.6;
+  }
 
-	hr {
-		border-color: #ddd;
-		border-width: 1px;
-	}
+  hr {
+    border-color: #ddd;
+    border-width: 1px;
+  }
 }
 
-// .section.intro {
-// 	color: #000;
-
-// 	$orange: #f27321;
-
-// 	h1,
-// 	h2,
-// 	h3,
-// 	h4,
-// 	h5,
-// 	h6,
-// 	p,
-// 	span,
-// 	.intro-header {
-// 		margin: 0;
-// 		line-height: 1;
-// 	}
-
-// 	.flex {
-// 		display: flex;
-// 		align-items: center;
-// 		justify-content: center;
-// 	}
-
-// 	.intro-header,
-// 	.catalyst {
-// 		opacity: 0;
-// 		text-align: center;
-
-// 		@media screen and (min-width: $medium) {
-// 			font-size: 56px;
-// 			font-size: 6vw;
-// 		}
-// 	}
-
-// 	#words {
-// 		position: relative;
-// 		display: inline-block;
-// 		// transform: translateY(-40px);
-// 		> span {
-// 			display: none;
-// 		}
-// 	}
-
-// 	.catalyst {
-// 		cursor: pointer;
-// 		display: none;
-// 		position: absolute;
-// 		width: 100%;
-// 		height: 100%;
-// 		left: 0;
-// 		top: 0;
-
-// 		svg {
-// 			position: absolute;
-// 			transform: translate(-50%, -50%);
-// 			left: 50%;
-// 			top: 50%;
-// 			height: auto;
-// 			width: auto;
-// 			min-width: 100vw;
-// 			min-height: 100vh;
-// 		}
-// 	}
-
-// 	#orange_dot,
-// 	#orange_dot2,
-// 	#orange_dot3 {
-// 		transform-origin: center center;
-// 	}
-// 	#orange_dot2 {
-// 		opacity: 0;
-// 		transform-origin: center center;
-// 	}
-
-// 	#orange_dot3_svg {
-// 		top: 0;
-// 		left: 0;
-// 		position: absolute;
-// 	}
-
-// 	#intro-chevron {
-// 		position: absolute;
-// 		bottom: 80px;
-// 		left: 50%;
-// 		width: 100px;
-// 		margin-left: -50px;
-// 		opacity: 0;
-// 	}
-// }
-
-// .fp-viewing-ceo {
-// 	#up-down {
-// 		img {
-// 			opacity: 1;
-// 		}
-// 	}
-// }
-
 [data-section='0'] {
-    background-color: inherit !important;
+  background-color: inherit !important;
 }
 
 // ceo
-.ceo-sub {
-	font-size: 18px;
-	font-weight: 700;
-}
-.ceo-h2 {
-		font-size: 34px !important;
-    font-weight: 500;
-}
+[data-section='2'] {
+  .inner-frame .grid-y {
+    max-width: 1000px;
+  }
+  .ceo-sub {
+    font-size: 18px;
+    font-weight: 700;
+  }
 
-.ceo-h3 {
-		font-size: 20px;
+  .ceo-h3 {
+    font-size: 20px;
     font-weight: 500;
+  }
 }
-
 
 .learnmore {
-	background: white;
-	color: #000;
-	h2 {
-		color: $orange;
-	}
-	a > img {
-		width: 30px;
-		height: 30px;
-	}
+  background: white;
+  color: #000;
+  h2 {
+    color: $orange;
+  }
+  a > img {
+    width: 30px;
+    height: 30px;
+  }
 }
 
 // #footer {
@@ -285,75 +186,75 @@
 // }
 
 .photo-credit {
-	&-container {
-		position: absolute;
-		left: 50px;
-		bottom: 30px;
-	}
-	&-trigger {
-		cursor: pointer;
-		span {
-		}
-		img {
-			width: 10px;
-			height: 6px;
-		}
-	}
+  &-container {
+    position: absolute;
+    left: 50px;
+    bottom: 30px;
+  }
+  &-trigger {
+    cursor: pointer;
+    span {
+    }
+    img {
+      width: 10px;
+      height: 6px;
+    }
+  }
 }
 
 .photo-credits {
-	position: absolute;
-	transform: translateY(100%);
-	z-index: 9999;
-	height: 50px;
-	width: 100%;
-	left: 0;
-	bottom: 0;
-	align-items: center;
+  position: absolute;
+  transform: translateY(100%);
+  z-index: 9999;
+  height: 50px;
+  width: 100%;
+  left: 0;
+  bottom: 0;
+  align-items: center;
 
-	padding: 0px 50px;
-	background: #fff;
-	color: #000;
+  padding: 0px 50px;
+  background: #fff;
+  color: #000;
 
-	display: none;
-	h6 {
-		margin-bottom: 0;
-		font-size: 20px;
-	}
-	span {
-		margin-right: 4px;
-	}
-	.credit-open & {
-		display: flex;
-	}
-	&:after {
-		content: '×';
-		position: absolute;
-		right: 50px;
-		bottom: 0;
-		font-size: 32px;
-		cursor: pointer;
-	}
+  display: none;
+  h6 {
+    margin-bottom: 0;
+    font-size: 20px;
+  }
+  span {
+    margin-right: 4px;
+  }
+  .credit-open & {
+    display: flex;
+  }
+  &:after {
+    content: '×';
+    position: absolute;
+    right: 50px;
+    bottom: 0;
+    font-size: 32px;
+    cursor: pointer;
+  }
 }
 
 .bg {
-	.fore {
-		position: absolute;
-		top: 0;
-		left: 0;
-	}
+  .fore {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
 }
 
 [data-closedrawer] {
-	position: absolute;
-	height: 100%;
-	width: 100%;
-	z-index: 10001;
-	top: 0;
-	left: 0;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  z-index: 10001;
+  top: 0;
+  left: 0;
 
-	display: none;
-	.drawer-open & {
-		display: block;
-	}
+  display: none;
+  .drawer-open & {
+    display: block;
+  }
 }
