updated with feedback notes

--- a/markup/index.hbs
+++ b/markup/index.hbs
@@ -15,7 +15,7 @@ scripts:
   - ../js/vendor/modernizr-3.6.0.js
   - ../js/index.js
 stylesheets:
-  - https://fonts.googleapis.com/css?family=Montserrat:500
+  - https://fonts.googleapis.com/css?family=Montserrat:400,500,700
   - https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.min.css
   - https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.css
   - ../scss/index.scss
@@ -44,19 +44,19 @@ sectionData:
         mobile: State-of-the-art TB control
         href: #one
         chapter: 1
-  - name: Career Centers (Morocco)
-    title: "You’re hired: 21st-century career centers"
-    subtitle: | 
-                <h3>Kenza Elbouazzaoui</h3>
-                <h3>Morocco</h3>
-    photoCredit: Amira Azzouzi/FHI 360
-    image: Career Center_-36_web.jpg
+
+  - name: SHIFT (Vietnam)
+    title: Leading the way in financing the HIV response
+    subtitle: <h3>Vietnam</h3>
+    photoCredit: Vu Ngoc Dung/FHI 360
+    image: SHIFT 8997_web.jpg
     caption: imageCaption caption
     toc:
-        desktop: "You’re hired: 21st-century career centers"
-        mobile: "You’re hired: 21st-century career centers"
+        desktop: Leading the way in financing the HIV response
+        mobile: Leading the way in financing the HIV response
         href: #one
         chapter: 2
+
   - name: Compass Rose (USA)
     title: Youth get a second chance
     subtitle: |
@@ -70,6 +70,7 @@ sectionData:
         mobile: Youth get a second chance
         href: #one
         chapter: 3
+
   - name: Yemen
     title: An integrated response addresses urgent needs 
     subtitle: <h3>Yemen</h3>
@@ -81,23 +82,30 @@ sectionData:
         mobile: An integrated response addresses urgent needs
         href: #one
         chapter: 4
+
   - name: HL2
     image: High level 2.png
     caption: imageCaption caption
-  - name: SHIFT (Vietnam)
-    title: Leading the way in financing the HIV response
-    subtitle: <h3>Vietnam</h3>
-    photoCredit: Vu Ngoc Dung/FHI 360
-    image: SHIFT 8997_web.jpg
+
+  - name: Career Centers (Morocco)
+    title: "You’re hired: 21st-century career centers"
+    subtitle: | 
+                <h3>Kenza Elbouazzaoui</h3>
+                <h3>Morocco</h3>
+    photoCredit: Amira Azzouzi/FHI 360
+    image: Career Center_-36_web.jpg
     caption: imageCaption caption
     toc:
-        desktop: Leading the way in financing the HIV response
-        mobile: Leading the way in financing the HIV response
+        desktop: "You’re hired: 21st-century career centers"
+        mobile: "You’re hired: 21st-century career centers"
         href: #one
         chapter: 5
+
   - name: DREAMS (Zimbabwe)
-    title: Girl power Jane Nyathi
-    subtitle: <h3>Zimbabwe</h3>
+    title: Girl power 
+    subtitle: |
+                <h3>Jane Nyathi</h3>
+                <h3>Zimbabwe</h3>
     photoCredit: Leanne Gray/FHI 360
     image: Dreams 536_web.jpg
     caption: imageCaption caption
@@ -106,6 +114,7 @@ sectionData:
         mobile: Girl power Jane Nyathi
         href: #one
         chapter: 6
+
   - name: NTD’s (Laos)
     title: Moving closer to wiping out neglected diseases
     subtitle: <h3>Laos</h3>
@@ -117,6 +126,7 @@ sectionData:
         mobile: Moving closer to wiping out neglected diseases
         href: #one
         chapter: 7
+
   - name: RANA (Nigeria)
     title: Literacy improved through local language learning
     subtitle: <h3>Nigeria</h3>
@@ -128,20 +138,23 @@ sectionData:
         mobile: Literacy improved through local language learning
         href: #one
         chapter: 8
+
   - name: HL3
     image: High level 3.png
     caption: imageCaption caption
+
   - name: Ventures
     title: FHI Ventures is launched to scale impact
     subtitle: 
     photoCredit: TBD
-    image: Ventures_gettyimages-554489637-170667a.jpg
+    image: ventures.jpeg
     caption: imageCaption caption
     toc:
         desktop: FHI Ventures is launched to scale impact
         mobile: FHI Ventures is launched to scale impact
         href: #one
         chapter: 9
+
   - name: CTI
     title: Groundbreaking contraceptive technologies
     subtitle:
@@ -153,6 +166,7 @@ sectionData:
         mobile: Groundbreaking contraceptive technologies
         href: #one
         chapter: 10
+
   - name: AMD (Ethiopia & Mozambique)
     title: Evidence to avert maternal and newborn deaths
     subtitle: <h3>Ethiopia and Mozambique</h3>
@@ -164,6 +178,7 @@ sectionData:
         mobile: Evidence to avert maternal and newborn deaths
         href: #one
         chapter: 11
+
   - name: Data Drives impact (Tanzania & Zanzibar)
     title: Data drives impact 
     subtitle: <h3>Tanzania and Zanzibar</h3>
@@ -175,9 +190,11 @@ sectionData:
         mobile: Data drives impact
         href: #one
         chapter: 12
+
   - name: HL4
     image: High level 4_video.png
     caption: imageCaption caption
+    
   - name: Learn More
 
 ---
