--- a/markup/partials/drawerContent/An-integrated-response-addresses-urgent-needs.hbs
+++ b/markup/partials/drawerContent/An-integrated-response-addresses-urgent-needs.hbs
@@ -1,5 +1,5 @@
 <h1 class="drawer-title">An integrated response addresses urgent needs</h1> 
-<p class="mb0"><strong class="uppercase">Yemen</strong></p>
+<p class="drawer-subtitle"><strong class="uppercase">Yemen</strong></p>
 <p>The civil war in <strong>Yemen</strong> has persisted for four years and resulted in the world's worst humanitarian disaster, with roughly 4 of 5 Yemenis in urgent need of assistance. The conflict has caused widespread food insecurity and malnutrition, further straining the basic health care system to the breaking point.</p>
 <p>In 2018, FHI 360 began working with communities near the front lines of the conflict. Our assessments identified a severe need for assistance in the coastal western districts of Dhubab, Al Mokha and Al Khawkhah. Until recently, these areas were inaccessible to international organizations. </p>
 <p>FHI 360's integrated approach is well suited to humanitarian emergencies and to fostering collaboration with community stakeholders, the United Nations, and government institutions to identify and prioritize needs.  </p>
