--- a/markup/partials/drawerContent/Girl-power.hbs
+++ b/markup/partials/drawerContent/Girl-power.hbs
@@ -1,7 +1,7 @@
 <h1 class="drawer-title">Girl power</h1> 
-<p class="mb0"><strong class="uppercase">Jane Nyathi<br>
+<p class="drawer-subtitle"><strong class="uppercase">Jane Nyathi<br>
 Zimbabwe</strong></p>
-<p>Girls and young women can be powerful agents for change, but far too many are denied opportunities to develop the self-confidence that is key to taking control of their destinies.</p>
+<p><img src="http://fhi360internalnewsletters.azurewebsites.net/ar-2018/Dreams%20546_DRAWER_web.jpg" alt="Young woman having a conversation with an adolescent girl.">Girls and young women can be powerful agents for change, but far too many are denied opportunities to develop the self-confidence that is key to taking control of their destinies.</p>
 <p>Jane Nyathi is not one of them. The 24-year-old is an assistant program officer for the Determined, Resilient, Empowered, AIDS-free, Mentored and Safe Women (DREAMS) public-private <a href="https://www.pepfar.gov/partnerships/ppp/dreams/" target="_blank">partnership</a> in Zimbabwe.</p>
 <p>Based in Bulawayo, <strong>Zimbabwe's</strong> second largest city, Jane, along with her colleagues, focuses on reducing new HIV infections among adolescent girls and young women ages 15 to 24 in six high-HIV-burden districts.</p>
 <p>Through DREAMS, FHI 360 delivers a comprehensive curriculum that focuses on HIV prevention, positive gender norms and building social assets, including social safety nets through mentors, peer groups, civic engagement and access to health information and services. The curriculum is targeted toward adolescent girls and young women and their sexual partners.</p>
