--- a/markup/partials/elements/simple-section.hbs
+++ b/markup/partials/elements/simple-section.hbs
@@ -17,9 +17,9 @@
     <div class="bg-screen"></div>
   {{/if}}
   <div class="grid-x inner-frame">
-    <div class="small-12 medium-8 cell grid-y align-right">
-      <div class="cell shrink slide-title stagger-in">
-        <h2>{{#block "title"}}{{title}}{{/block}}</h2>
+    <div class="small-12 medium-8 cell grid-y align-right slide-titles">
+      <div class="cell shrink stagger-in">
+        <h2 class="slide-title">{{#block "title"}}{{title}}{{/block}}</h2>
       </div>
       {{#if subtitle }}
       {{!-- <div class="cell shrink stagger-in">
