--- a/markup/partials/header.hbs
+++ b/markup/partials/header.hbs
@@ -60,7 +60,7 @@
                     <div class="cell shrink">
                         <div class="toc-toggle">
                             <div class="toc-toggle-inner">
-                                Start
+                                <small>Stories</small>
                             </div>
                             <div class="toc-progress">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="48.5" height="48.5"
