--- a/markup/partials/sections/tb.hbs
+++ b/markup/partials/sections/tb.hbs
@@ -1,5 +1,5 @@
 {{#extend "elements/simple-section" drawer=true}}
     {{#content "drawer-content"}}
-        <h1>TBD</h1>
+         {{> drawerContent/State-of-the-art-TB-control}}
     {{/content}}
 {{/extend}}
