--- a/markup/partials/drawerContent/Evidence-to-avert-maternal-and-newborn-death.hbs
+++ b/markup/partials/drawerContent/Evidence-to-avert-maternal-and-newborn-death.hbs
@@ -1,5 +1,5 @@
 <h1 class="drawer-title">Evidence to avert maternal and newborn deaths</h1>
-<p class="mb0"><strong class="uppercase">Ethiopia and Mozambique</strong></p>
+<p class="drawer-subtitle"><strong class="uppercase">Ethiopia and Mozambique</strong></p>
 <p>Timely access to quality health care is critical in an emergency. Every minute counts when saving a life.</p>
 <p>Researchers at FHI 360 generated complex geospatial models in a geographic information system (GIS) for <strong>Mozambique</strong> and <strong>Ethiopia</strong> to calculate travel times to community and regional emergency obstetric and newborn care services. Through this modeling, FHI 360 analyzed the distance women must travel to emergency obstetric and newborn care facilities to provide policymakers with accurate information about women'’'s travel time. The mapped results showed vast disparities in access, such as demonstrating that roughly a quarter of the population in both countries is more than five hours from lifesaving services. They then modeled improvement scenarios in GIS to show where upgrading facilities, adding ambulances and improving communications could curb maternal and newborn mortality.</p>
 <hr>
