--- a/markup/partials/drawerContent/Literacy-improved-through-local-language-learning.hbs
+++ b/markup/partials/drawerContent/Literacy-improved-through-local-language-learning.hbs
@@ -1,5 +1,5 @@
 <h1 class="drawer-title">Literacy improved through local language learning</h1>
-<p class="mb0"><strong class="uppercase">Nigeria</strong></p>
+<p class="drawer-subtitle"><strong class="uppercase">Nigeria</strong></p>
 <p>In Nigeria's northwest states of Katsina and Zamfara, fewer than one-quarter of children can read a single word. Children without basic reading and math skills are less likely to finish school and hold jobs.</p>
 <p>That is changing since the Reading and Numeracy Activity (RANA) project introduced Hausa language teaching materials in grades 1-3.  RANA also equips teachers with new techniques, engages local governments in school oversight, and mobilizes parents to be involved in their children's education.</p>
 <p>In 2018, the Katsina and Zamfara state governments adopted the <em>Hausa Early Grade Reading Implementation Guideline</em>, which outlines state education authorities' responsibility for supporting Hausa literacy. FHI 360 collaborated with local government and community organizations to develop the guidelines. The Katsina state government has printed and distributed more than 353,000 RANA-authored student workbooks.</p>
