--- a/markup/partials/sections/ceo-letter.hbs
+++ b/markup/partials/sections/ceo-letter.hbs
@@ -4,4 +4,7 @@
         <h2 class="faded70 ceo-h2">This report is about people — people who, faced with seemingly insurmountable challenges, remain determined to shape their own destinies and contribute to their communities.</h2>
         <h3 class="faded70 ceo-h3">Learn more about how we partner with individuals, communities and nations to support people in addressing the major forces that affect their lives.</h3>
     {{/content}}
+    {{#content "drawer-content"}}
+        {{> drawerContent/ceo-message}}
+    {{/content}}
 {{/extend}}
