--- a/markup/partials/sections/hl2.hbs
+++ b/markup/partials/sections/hl2.hbs
@@ -1,5 +1,5 @@
 {{#extend "elements/animated-section" drawer=false}}
     {{#content "content"}}
-        <h2>We work hand-in-hand with our partners to create <span class="uppercase bold">healthier, safer and more prosperous</span> communities.</h2>
+        <h2 class="fw500">We work hand-in-hand with our partners to create <span class="uppercase bold">HEALTHY, EMPOWERED</span> and <span class="uppercase bold"></span>MORE PROSPEROUS</span> communities.</h2>
     {{/content}}
 {{/extend}}
