--- a/markup/partials/sections/hl3.hbs
+++ b/markup/partials/sections/hl3.hbs
@@ -1,5 +1,5 @@
 {{#extend "elements/animated-section" drawer=false}}
     {{#content "content"}}
-        <h2>We generate cutting-edge <span class="uppercase bold">research</span>, apply <span class="uppercase bold">technology</span> in innovative ways and invest in <span class="uppercase bold">entrepreneurship</span> to deliver greater social impact.</h2>
+        <h2 class="fw500">We generate cutting-edge <span class="uppercase bold">research</span>, apply <span class="uppercase bold">technology</span> in novel ways and invest in <span class="uppercase bold">entrepreneurship</span> to deliver greater social impact.</h2>
     {{/content}}
 {{/extend}}
