--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -1,119 +1,140 @@
 // index.js
 .objectfit-img img {
-	height: 100%;
-	width: 100%;
-	object-fit: cover;
-	object-position: center;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 .objectfit-img.top img {
-	object-position: top center;
+  object-position: top center;
 }
 .compat-object-fit {
-	background-size: cover;
-	background-position: center center;
+  background-size: cover;
+  background-position: center center;
 
-	&.top {
-		background-position: top center;
-	}
+  &.top {
+    background-position: top center;
+  }
 
-	img {
-		opacity: 0;
-		pointer-events: none;
-	}
+  img {
+    opacity: 0;
+    pointer-events: none;
+  }
 }
 .objectfit-img.remove-object-fit {
-	img {
-		height: auto;
-	}
+  img {
+    height: auto;
+  }
 }
 
 // elements
 
 hr {
-	border-width: 3px;
-	border-color: rgba(255, 255, 255, 0.5);
+  border-width: 3px;
+  border-color: rgba(255, 255, 255, 0.5);
 
-	&.medium {
-		border-width: 2px;
-		width: 225px;
-	}
-	&.small {
-		margin: 50px 0 30px 0;
-		width: 67px;
-	}
+  &.medium {
+    border-width: 2px;
+    width: 225px;
+  }
+  &.small {
+    margin: 50px 0 30px 0;
+    width: 67px;
+  }
 }
 
 .section hr.small {
-	margin-left: 0;
-	margin-right: auto;
+  margin-left: 0;
+  margin-right: auto;
 }
 
 ul.checkmarks {
-	list-style: none;
-	margin-left: 0;
-	li {
-		padding-left: 40px;
-		height: 30px;
-		span {
-			font-size: 30px !important;
-		}
-	}
-	img {
-		margin-left: -40px;
-		margin-right: 20px;
-	}
+  list-style: none;
+  margin-left: 0;
+  li {
+    padding-left: 40px;
+    height: 30px;
+    span {
+      font-size: 30px !important;
+    }
+  }
+  img {
+    margin-left: -40px;
+    margin-right: 20px;
+  }
 }
 
 // spacing
 
 .p1 {
-	padding: 10px;
+  padding: 10px;
 }
 
 .p2 {
-	padding: 20px;
+  padding: 20px;
 }
 
 .m1 {
-	margin: 10px;
+  margin: 10px;
 }
 
 .m2 {
-	margin: 20px;
+  margin: 20px;
 }
 
 .mb0 {
-	margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 .mb08 {
-	margin-bottom: 8px;
+  margin-bottom: 8px;
 }
 
 .mb4 {
-	margin-bottom: 40px;
+  margin-bottom: 40px;
 }
 
 // type
 
 body {
-	font-family: 'mr-eaves-modern';
-	font-size: 20px;
+  font-family: 'Montserrat', 'Helvetica', sans-serif;
+  font-size: 20px;
 }
 .uppercase {
-	text-transform: uppercase;
+  text-transform: uppercase;
 }
 .bold {
-	font-weight: 900;
+  font-weight: 700;
 }
 
 .faded70 {
-	opacity: 0.7;
+  opacity: 0.7;
+}
+
+.fw300 {
+  font-weight: 300;
+}
+
+.fw500 {
+  font-weight: 500;
 }
 
 .middle-center {
-	align-items: center;
+  align-items: center;
   justify-content: center;
+}
+
+span,
+p,
+a {
+  font-family: 'Montserrat', 'Helvetica', sans-serif;
+  line-height: 1;
+}
+
+
+strong,
+b {
+  font-weight: 700;
 }
 
 .h1,
@@ -127,259 +148,350 @@ h2,
 h3,
 h4,
 h5,
-h6,
-span,
-p,
-a {
-	font-family: 'mr-eaves-modern';
-	font-weight: 200;
-	line-height: 1;
+h6 {
+  font-family: 'Montserrat', 'Helvetica', sans-serif;
+  font-weight: 700;
+}
 
-	strong,
-	b {
-		font-weight: bold;
-	}
+// drawers
+.drawer-button {
+  cursor: pointer;
+  width: 80px;
+  margin-bottom: 0px;
+
+  &_container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+
+    position: absolute;
+    transform: translateX(-50%);
+    left: 50%;
+    bottom: 0;
+    margin-bottom: 60px;
+    z-index: 10003;
+
+    img {
+      transition: all ease 300ms;
+      transform-origin: 45% center;
+    }
+  }
+}
+.drawer-close-button {
+  opacity: 0;
+  position: absolute;
+  pointer-events: none;
+  top: 0;
+  left: 0;
+  width: 80px;
+  transform: rotate(90deg);
+}
+
+.drawer-open .drawer-button_container {
+  .drawer-button_label {
+    opacity: 0;
+  }
+  img {
+    opacity: 0;
+  }
+  .drawer-close-button {
+    transform: rotate(0);
+    opacity: 1;
+  }
+}
+
+.leftDrawer {
+  background: #fff;
+  color: #000;
+  height: 100vh;
+  position: absolute;
+  left: 0;
+  top: 0;
+  transform: translateX(-100%);
+  width: 50%;
+  z-index: 10002;
+  padding: 0 30px;
+
+  overflow-y: auto;
+
+  .drawer-open & {
+    box-shadow: black 0px 0px 50px 0px;
+  }
+
+  .drawer-title {
+    color: #1A1A1A;
+    margin: 0.67em 0 0.25em;
+  }
+  .drawer-subtitle {
+    font-weight: 700;
+    text-transform: uppercase;
+    color: $orange;
+  }
+
+  a {
+    color: $orange;
+    font-weight: 700;
+  }
+
+  p {
+    line-height: 1.6;
+  }
+
+  hr {
+    border-color: #ddd;
+    border-width: 1px;
+  }
+
+  h2 {
+    font-size: 1.25em;
+    margin-top: 1.5em;
+  }
+
+  img {
+    margin-bottom: 1.5em;
+  }
 }
 
 // TOC
 
 .toc-toggle {
-	cursor: pointer;
-	border-radius: 100%;
-	border: 6px solid #ddd;
-	height: 50px;
-	width: 50px;
+  cursor: pointer;
+  border-radius: 100%;
+  border: 6px solid #ddd;
+  height: 50px;
+  width: 50px;
 
-	position: relative;
+  position: relative;
 
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	&-inner {
-		text-transform: uppercase;
-		font-size: 13px;
-	}
-	.toc-progress {
-		position: absolute;
-		top: -5px;
-	}
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  &-inner {
+    text-transform: uppercase;
+    font-size: 8px;
+    line-height: 0;
+  }
+  .toc-progress {
+    position: absolute;
+    top: -5px;
+  }
 }
 
 .close-rightbar {
-	display: none;
-	position: fixed;
-	z-index: 1000;
-	background: rgba(0, 0, 0, 0.5);
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  background: rgba(0, 0, 0, 0.5);
 
-	.toc-open & {
-		top: 0;
-		left: 0;
-		height: 100%;
-		width: 100%;
-		display: block;
-	}
+  .toc-open & {
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    display: block;
+  }
 }
 
 #rightSideBar {
-	background: #fff;
-	color: #000;
-	height: 100%;
-	height: 100vh;
-	position: fixed;
-	right: 0;
-	top: 0;
-	transform: translateX(100%);
-	z-index: 10002;
+  background: #fff;
+  color: #000;
+  height: 100%;
+  height: 100vh;
+  position: fixed;
+  right: 0;
+  top: 0;
+  transform: translateX(100%);
+  z-index: 10002;
 
-	width: 400px;
+  width: 400px;
 
-	.toc-open & {
-		box-shadow: rgb(0, 0, 0) 0px 0px 156px 20px;
-	}
+  .toc-open & {
+    box-shadow: rgb(0, 0, 0) 0px 0px 156px 20px;
+  }
 
-	.toc {
-		height: 100%;
-	}
-	.toc-item {
-		cursor: pointer;
-		padding: 10px 20px;
-		align-items: center;
-		border-bottom: 1px solid #ddd;
-	}
-	.toc-number {
-		color: #000;
-		padding: 10px;
-		border: 5px solid black;
-		border-radius: 100%;
-		display: flex;
-		width: 50px;
-		height: 50px;
-		align-items: center;
-		justify-content: center;
-	}
-	.toc-title {
-		color: #000;
-		padding: 10px 50px 10px 10px;
+  .toc {
+    height: 100%;
+  }
+  .toc-item {
+    cursor: pointer;
+    padding: 10px 20px;
+    align-items: center;
+    border-bottom: 1px solid #ddd;
+  }
+  .toc-number {
+    color: #000;
+    padding: 10px;
+    border: 5px solid black;
+    border-radius: 100%;
+    display: flex;
+    width: 50px;
+    height: 50px;
+    align-items: center;
+    justify-content: center;
+  }
+  .toc-title {
+    color: #000;
+    padding: 10px 50px 10px 10px;
 
-		span {
-			font-size: 18px;
-		}
-	}
+    span {
+      font-size: 18px;
+    }
+  }
 }
 
 // Header
 
 #header {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
 
-	z-index: 1001;
+  z-index: 1001;
 
-	background: #fff;
+  background: #fff;
 
-	padding: 0px;
-	transition: all ease 300ms;
+  padding: 0px;
+  transition: all ease 300ms;
 
-	.drawer-open &,
-	.toc-open & {
-		opacity: 0;
-	}
+  .drawer-open &,
+  .toc-open & {
+    opacity: 0;
+  }
 
-	.home-logo {
-		width: 125px;
-	}
+  .home-logo {
+    width: 125px;
+  }
 
-	li a {
-		text-transform: uppercase;
-		color: #000;
-		font-weight: 700;
-		letter-spacing: 0.1em;
-		font-size: 14px;
-	}
-	.menu.main li {
-		padding: 0 5px;
-	}
+  li a {
+    text-transform: uppercase;
+    color: #000;
+    font-weight: 700;
+    letter-spacing: 0.1em;
+    font-size: 14px;
+  }
+  .menu.main li {
+    padding: 0 5px;
+  }
 }
 
 .footer {
-	background: #f2f2f2;
+  background: #f2f2f2;
 }
 
 // Widgets
 .counter {
-	margin-bottom: 0;
-	font-size: 88px;
-	font-weight: 200;
+  margin-bottom: 0;
+  font-size: 88px;
+  font-weight: 200;
 
-	label {
-		font-size: 16px;
-		color: #fff;
-	}
+  label {
+    font-size: 16px;
+    color: #fff;
+  }
 }
 nav#up-down {
-	position: fixed;
-	right: 30px;
-	top: 0;
-	height: 100vh;
-	z-index: 2;
+  position: fixed;
+  right: 30px;
+  top: 0;
+  height: 100vh;
+  z-index: 2;
 
-	.fp-viewing-intro & {
-		opacity: 0;
-	}
+  .fp-viewing-intro & {
+    opacity: 0;
+  }
 
-	img {
-		cursor: pointer;
-		position: fixed;
-		right: 30px;
-		top: 125px;
-		z-index: 2;
-		width: 20px;
-		opacity: 0.4;
+  img {
+    cursor: pointer;
+    position: fixed;
+    right: 30px;
+    top: 125px;
+    z-index: 2;
+    width: 20px;
+    opacity: 0.4;
 
-		&[data-movedown] {
-			transform: rotate(180deg);
-			bottom: 50px;
-			top: auto;
-		}
-	}
+    &[data-movedown] {
+      transform: rotate(180deg);
+      bottom: 50px;
+      top: auto;
+    }
+  }
 }
 
 .toc-progress {
-	transform-origin: center center;
-	transform: rotate(-90deg);
+  transform-origin: center center;
+  transform: rotate(-90deg);
 
-	position: absolute;
-	top: 19px;
-	width: 48.5px;
-	height: 48.5px;
+  position: absolute;
+  top: 19px;
+  width: 48.5px;
+  height: 48.5px;
 
-	svg circle {
-		transition: stroke-dasharray 0.5s linear;
-	}
+  svg circle {
+    transition: stroke-dasharray 0.5s linear;
+  }
 
-	&.one circle {
-		stroke-dasharray: 1px 500px;
-	}
+  &.one circle {
+    stroke-dasharray: 1px 500px;
+  }
 }
 
-.fp-viewing-intro .toc-progress circle {
-	stroke-dasharray: 200px 500px;
+.fp-viewing-one .toc-progress circle {
+  stroke-dasharray: 200px 500px;
 }
-.fp-viewing-jordanlens .toc-progress circle {
-	stroke-dasharray: 10px 500px;
+.fp-viewing-two .toc-progress circle {
+  stroke-dasharray: 10px 500px;
 }
-.fp-viewing-jordanlens-2 .toc-progress circle {
-	stroke-dasharray: 20px 500px;
+.fp-viewing-three .toc-progress circle {
+  stroke-dasharray: 20px 500px;
 }
-.fp-viewing-hptn .toc-progress circle {
-	stroke-dasharray: 30px 500px;
+.fp-viewing-four .toc-progress circle {
+  stroke-dasharray: 30px 500px;
 }
-.fp-viewing-ivlp .toc-progress circle {
-	stroke-dasharray: 40px 500px;
+.fp-viewing-five .toc-progress circle {
+  stroke-dasharray: 40px 500px;
 }
-.fp-viewing-ivlp-2 .toc-progress circle {
-	stroke-dasharray: 50px 500px;
+.fp-viewing-six .toc-progress circle {
+  stroke-dasharray: 50px 500px;
 }
-.fp-viewing-sinoimplant .toc-progress circle {
-	stroke-dasharray: 60px 500px;
+.fp-viewing-seven .toc-progress circle {
+  stroke-dasharray: 60px 500px;
 }
-.fp-viewing-succeed2020 .toc-progress circle {
-	stroke-dasharray: 70px 500px;
+.fp-viewing-eight .toc-progress circle {
+  stroke-dasharray: 70px 500px;
 }
-.fp-viewing-succeed2020-2 .toc-progress circle {
-	stroke-dasharray: 80px 500px;
+.fp-viewing-nine .toc-progress circle {
+  stroke-dasharray: 80px 500px;
 }
-.fp-viewing-challengetb .toc-progress circle {
-	stroke-dasharray: 90px 500px;
+.fp-viewing-ten .toc-progress circle {
+  stroke-dasharray: 90px 500px;
 }
-.fp-viewing-fanta .toc-progress circle {
-	stroke-dasharray: 100px 500px;
+.fp-viewing-eleven .toc-progress circle {
+  stroke-dasharray: 100px 500px;
 }
-.fp-viewing-civilsociety .toc-progress circle {
-	stroke-dasharray: 110px 500px;
+.fp-viewing-twelve .toc-progress circle {
+  stroke-dasharray: 110px 500px;
 }
-.fp-viewing-uswdp .toc-progress circle {
-	stroke-dasharray: 120px 500px;
+.fp-viewing-thirteen .toc-progress circle {
+  stroke-dasharray: 120px 500px;
 }
-.fp-viewing-uswdp-2 .toc-progress circle {
-	stroke-dasharray: 130px 500px;
+.fp-viewing-fourteen .toc-progress circle {
+  stroke-dasharray: 130px 500px;
 }
-.fp-viewing-technology .toc-progress circle {
-	stroke-dasharray: 140px 500px;
+.fp-viewing-fifteen .toc-progress circle {
+  stroke-dasharray: 140px 500px;
 }
-.fp-viewing-learn-more .toc-progress circle {
-	stroke-dasharray: 150px 500px;
+.fp-viewing-sixteen .toc-progress circle {
+  stroke-dasharray: 150px 500px;
 }
 
 .share-menu {
-	ul.menu,
-	&:hover .share-icon {
-		display: none;
-	}
-	&:hover ul.menu {
-		display: flex;
-	}
+  ul.menu,
+  &:hover .share-icon {
+    display: none;
+  }
+  &:hover ul.menu {
+    display: flex;
+  }
 }
-
