--- a/scss/partials/_slides.scss
+++ b/scss/partials/_slides.scss
@@ -50,104 +50,29 @@
     }
   }
 
-  .slide-title h2 {
+  .slide-title {
     font-size: 30px;
-    font-weight: 500;
+    font-size: 3.75vw;
   }
   .slide-subtitle h3 {
     font-size: 20px;
-    font-weight: 200;
-    color: rgba(255, 255, 255, 0.75);
+    color: white;
     margin-bottom: 0;
+    line-height: 1.5;
+    text-transform: uppercase;
+    
   }
 
   @media screen and (min-width: $medium) {
-    .slide-title h2 {
+    .slide-title {
       font-size: 3.75vw;
     }
     .slide-subtitle h3 {
-      font-size: 2.5vw;
+      font-size: 1.35vw;
     }
   }
 }
 
-.drawer-button {
-  cursor: pointer;
-  width: 80px;
-  margin-bottom: 0px;
-
-  &_container {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-
-    position: absolute;
-    transform: translateX(-50%);
-    left: 50%;
-    bottom: 0;
-    margin-bottom: 60px;
-    z-index: 10003;
-
-    img {
-      transition: all ease 300ms;
-      transform-origin: 45% center;
-    }
-  }
-}
-.drawer-close-button {
-  opacity: 0;
-  position: absolute;
-  pointer-events: none;
-  top: 0;
-  left: 0;
-  width: 80px;
-  transform: rotate(90deg);
-}
-
-.drawer-open .drawer-button_container {
-  .drawer-button_label {
-    opacity: 0;
-  }
-  img {
-    opacity: 0;
-  }
-  .drawer-close-button {
-    transform: rotate(0);
-    opacity: 1;
-  }
-}
-
-.leftDrawer {
-  background: #fff;
-  color: #000;
-  height: 100vh;
-  position: absolute;
-  left: 0;
-  top: 0;
-  transform: translateX(-100%);
-  width: 50%;
-  z-index: 10002;
-  padding: 0 30px;
-
-  overflow-y: auto;
-
-  .drawer-open & {
-    box-shadow: black 0px 0px 50px 0px;
-  }
-
-  .drawer-title {
-    color: $orange;
-  }
-  p {
-    line-height: 1.6;
-  }
-
-  hr {
-    border-color: #ddd;
-    border-width: 1px;
-  }
-}
 
 [data-section='0'] {
   background-color: inherit !important;
@@ -156,7 +81,7 @@
 // ceo
 [data-section='2'] {
   .inner-frame .grid-y {
-    max-width: 1000px;
+    max-width: 1200px;
   }
   .ceo-sub {
     font-size: 18px;
