added svgs and video

--- a/markup/partials/sections/intro.hbs
+++ b/markup/partials/sections/intro.hbs
@@ -1,5 +1,5 @@
 {{#extend "elements/animated-section" drawer=false}}
     {{#content "content"}}
-        <h2>8 Billion Reasons</h2>
+        <img src="../../../img/svg/intro.svg" alt="">
     {{/content}}
 {{/extend}}
