--- a/markup/index.hbs
+++ b/markup/index.hbs
@@ -214,7 +214,7 @@ sectionData:
           {{> sections/intro sectionIndex=@index }}
         {{/eq}}        
         {{#eq  this.name "HL1" }}
-          {{> sections/hl1 sectionIndex=@index }}
+          {{> sections/hl1 sectionIndex=@index  animName=hl1 }}
         {{/eq}}
         {{#eq  this.name "Ceo Letter" }}
           {{> sections/ceo-letter sectionIndex=@index }}
@@ -232,7 +232,7 @@ sectionData:
           {{> sections/yemen sectionIndex=@index }}
         {{/eq}}
         {{#eq  this.name "HL2" }}
-          {{> sections/hl2 sectionIndex=@index }}
+          {{> sections/hl2 sectionIndex=@index  animName=hl2 }}
         {{/eq}}
         {{#eq  this.name "SHIFT (Vietnam)" }}
           {{> sections/shift sectionIndex=@index }}
@@ -246,7 +246,7 @@ sectionData:
         {{#eq  this.name "RANA (Nigeria)" }}
           {{> sections/rana sectionIndex=@index }}
         {{/eq}}
-        {{#eq  this.name "HL3" }}
+        {{#eq  this.name "HL3"  animName=hl3 }}
           {{> sections/hl3 sectionIndex=@index }}
         {{/eq}}
         {{#eq  this.name "Ventures" }}
@@ -261,7 +261,7 @@ sectionData:
         {{#eq  this.name "Data Drives impact (Tanzania & Zanzibar)" }}
           {{> sections/dig-solution sectionIndex=@index }}
         {{/eq}}
-        {{#eq  this.name "HL4" }}
+        {{#eq  this.name "HL4"  animName=hl4 }}
           {{> sections/hl4 sectionIndex=@index }}
         {{/eq}}
         {{#eq  this.name "Learn More" }}
