--- a/markup/partials/sections/hl1.hbs
+++ b/markup/partials/sections/hl1.hbs
@@ -1,4 +1,7 @@
 {{#extend "elements/animated-section" drawer=false}}
+    {{#content 'svg'}}
+        {{> svg/svg-hl1}}
+    {{/content}}
     {{#content "content"}}
         <h2 class="fw500">With the global population expected to reach <span class="uppercase bold">8 billion</span> by 2023, today’s human development challenges cry out for urgent, bold and novel solutions.</h2>
     {{/content}}
