--- a/markup/partials/sections/hl3.hbs
+++ b/markup/partials/sections/hl3.hbs
@@ -1,4 +1,7 @@
 {{#extend "elements/animated-section" drawer=false}}
+    {{#content 'svg'}}
+        {{> svg/svg-hl3}}
+    {{/content}}
     {{#content "content"}}
         <h2 class="fw500">We generate cutting-edge <span class="uppercase bold">research</span>, apply <span class="uppercase bold">technology</span> in novel ways and invest in <span class="uppercase bold">entrepreneurship</span> to deliver greater social impact.</h2>
     {{/content}}
