--- a/markup/partials/sections/hl4.hbs
+++ b/markup/partials/sections/hl4.hbs
@@ -1,4 +1,7 @@
 {{#extend "elements/animated-section" drawer=false}}
+    {{#content 'svg'}}
+        {{> svg/svg-hl4}}
+    {{/content}}
     {{#content "content"}}
         <h2 class="fw500">When people have the chance to improve their lives and build their communities, they will seize the opportunity and contribute to a <span class="uppercase bold">better future</span> for all of us.</h2>
     {{/content}}
